--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,18 @@
     padding: 20px 0px 20px 0px;
 }
 .jumbotron {
-    padding:70px 30px 70px 30px;
+    padding:70px 30px;
     margin:0px auto;
     background: #9575CD ;
     color:floralwhite;
+}
+
+.main{
+    padding: 50px 20px;
+}
+
+.main{
+    margin: 10px auto; 
 }
 
 address{
