--- a/css/styles.scss
+++ b/css/styles.scss
@@ -76,3 +76,12 @@ body{
     position: absolute;
     bottom: 0px;
 }
+
+.modal-header{
+  background-color: $background-dark;
+  color:floralwhite;
+}
+
+.modal-body{
+  background-color: $background-pale;
+}
