--- a/css/styles.scss
+++ b/css/styles.scss
@@ -80,6 +80,9 @@ body{
 .modal-header{
   background-color: $background-dark;
   color:floralwhite;
+  .close{
+    color:floralwhite;
+  }
 }
 
 .modal-body{
